# type-theory

./: .gitignore  README.md
aulas/aula0/: Semantics.v  aula0.md  makefile
aulas/aula1/: Main.lhs  bf.cabal
aulas/aula1/src/: Main.lhs  makefile
aulas/aula10/: Main.lhs  makefile
aulas/aula11/: Main.lhs  makefile
aulas/aula11/src/: Main.lhs
aulas/aula11/src/Data/: Syntax.lhs
aulas/aula11/src/Eval/: Eval.lhs
aulas/aula11/src/Parser/: Lexer.lhs  Parser.lhs
aulas/aula11/src/Tc/: Subst.lhs  Tc.lhs  TcMonad.lhs
aulas/aula12/src/: Main.lhs  README.md  coreML.cabal  teste.ml
aulas/aula12/src/Data/: Syntax.lhs
aulas/aula12/src/Parser/: Parser.lhs
aulas/aula12/src/Tc/: ConstraintGen.lhs  TcMonad.lhs  TcSubst.lhs
aulas/aula12/src/Utils/: PPrint.lhs
aulas/aula13/src/: Main.lhs  README.md
aulas/aula13/src/Data/: Syntax.lhs
aulas/aula13/src/Parser/: Lexer.lhs  Parser.lhs
aulas/aula13/src/Tc/: ConstraintGen.lhs  TcMonad.lhs  TcSubst.lhs
aulas/aula13/src/Utils/: PPrint.lhs  SemanticMonad.lhs
aulas/aula2/: Color.config  Main.lhs  aula2.aux  aula2.tex  aula2.toc  makefile
aulas/aula3/: Main.lhs  aula2.tex  aula3.tex  makefile
aulas/aula4/: Main.lhs  makefile
aulas/aula5/: Main.lhs  makefile
aulas/aula6/: Main.lhs  makefile
aulas/aula7/: Main.lhs  makefile
aulas/aula8/: Main.lhs  makefile
aulas/aula9/: Main.lhs  makefile
listas/lista1/: Main.lhs  makefile
listas/lista2/: Main.lhs  makefile
listas/lista3/: lista3.md
listas/lista4/: lista4.md
seminarios/: seminario.md
