name:                coreML
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Rodrigo Ribeiro
maintainer:          rodrigogribeiro@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable coreML
  build-depends:             
      base          >= 4.6   && <4.8
    , pretty        >= 1.1   && <1.2
    , parsec        >= 3.1   && <3.2
    , text          >= 1.2   && <1.3
    , containers    >= 0.5   && <0.6
    , mtl           >= 2.2   && <2.3
    , transformers  >= 0.4.2 && <0.5
    , repline       >= 0.1.2.0
  default-language:    Haskell2010
  main-is:             Main.lhs